package models;

import java.util.List;

public class Autor {

    private int id;
    private String nome;
    private List<Livro> livros;
}
