package models;

import java.util.List;

public class Biblioteca {

    private int id;
    private String nome;
    private String endereco;
    private List<Exemplar> exemplares;
}
