package models;

import java.util.List;

public class Editora {

    private int id;
    private String nome;
    private List<Livro> livros;
}
