package models;

public class Emprestimo {

    private int id;
    private String dataRetirada;
    private String dataDevolucao;

    private Exemplar exemplar;
}
