package models;

public class Reserva {

    private int id;
    private String dataSolicitacao;
    private String dataExpiracao;

    private Usuario usuario;
    private Exemplar exemplar;
}
