package models;

import java.util.List;

public class Usuario {

    private int id;
    private String nome;
    private String email;

    private List<Reserva> reservas;
}
